--- a/404.html
+++ b/404.html
@@ -56,11 +56,13 @@
                 </div>
             </nav>
             <center>
-              <h1>Welcome to West Fulton High School</h1>
-              <ul>
-                <a class="btn btn-primary" href="/blog/">Home</a>
-                <a class="btn btn-primary" onclick="back">Supportt</a>
-              </ul>
+                <h4>Uh oh...</h4>
+                <h1>404</h1>
+                <h4>Page not found</h4>
+                <ul>
+                    <a class="btn btn-primary" href="/blog/">Home</a>
+                    <a class="btn btn-primary" href="help.html">Support</a>
+                </ul>
             </center>
             <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     </body>
