--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           analytics.page();
           }}();
         </script>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div id="navigation">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">West Fulton High School</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -72,18 +73,37 @@
                   </div>
                 </div>
             </nav>
-            <center>
-              <h1>Welcome to West Fulton High School</h1>
-              <ul>
-                <a class="btn btn-primary" href="/blog/">Blog (COMING SOON)</a>
-                <a class="btn btn-primary" href="/docs/">Docs (COMING SOON)</a>
-                <a class="btn btn-primary" href="#applications">Applications</a>
-              </ul>
-            </center>
-            <hr>
-            <div id="applications">
-              <iframe src="https://docs.google.com/forms/d/1dI7J6j5zOmfpN_CDHTkVHW7tbOWrJLC2Dx9wpsB0k5U" frameborder="0"></iframe>
-            </div>
-            <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+        </div>
+        <div id="main">
+          <center>
+            <h1>Welcome to West Fulton High School</h1>
+            <ul>
+              <a class="btn btn-primary" href="/blog/">Blog (COMING SOON)</a>
+              <a class="btn btn-primary" href="https://docs.westfultonhighschool.tk">Docs</a>
+              <a class="btn btn-primary" href="#applications">Applications</a>
+            </ul>
+          </center>
+        </div>
+      <hr>
+      <div id="applications">
+        <h5>Applications</h5>
+        <hr>
+        <iframe src="https://docs.google.com/forms/d/1dI7J6j5zOmfpN_CDHTkVHW7tbOWrJLC2Dx9wpsB0k5U" height="600" width="400" frameborder="0"></iframe>
+      </div>
+      <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+      <div id="footer">
+        <footer>
+          <center>
+              <div>
+                <p>(C) 2019 West Fulton High School</p>
+                <ul>
+                  <a class="btn btn-primary" href="/">Home</a>
+                  <a class="btn btn-primary" href="help.html">Help</a>
+                  <a class="btn btn-primary" href="about.html">About</a>
+                  <a class="btn btn-primary" href="https://docs.westfultonhighschool.tk">Docs</a>
+              </div>
+          </center>
+        </footer>
+      </div>
     </body>
 </html>
