--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="https://cdn.westfultonhighschool.tk/all.css">
+        <link rel="stylesheet" href="https://cdn.westfultonhighschool.tk/css/all.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
         <title>West Fulton High School</title>
     </head>
     <body>
-        <script src="https://cdn.westfultonhighschool.tk/all.js"></script>
+        <script src="https://cdn.westfultonhighschool.tk/js/all.js"></script>
         <script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script>
