--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
         <title>West Fulton High School</title>
     </head>
     <body>
+        <script>
+            if('serviceWorker' in navigator) {
+              navigator.serviceWorker
+                       .register('/sw.js')
+                       .then(function() { console.log("Service Worker Registered"); });
+            }
+        </script>
         <script src="https://cdn.westfultonhighschool.tk/js/all.js"></script>
         <script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
