--- a/public_blog/public/index.html
+++ b/public_blog/public/index.html
@@ -74,13 +74,13 @@
         </div>
         <div id="main">
           <center>
-            <h1>West Fulton High School Blog</h1>
+            <h1>Westwood High School Blog</h1>
           </center>
         </div>
       <hr>
       <div id="content">
         <ul>
-          <p>Nothing in the blog today...</p>
+          <a href="https://blog.westfultonhighschool.tk" class="btn btn-primary"></a>
         </ul>
       </div>
       <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
