--- a/public_website/public/index.html
+++ b/public_website/public/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://cdn.westfultonhighschool.tk/css/all.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
-        <title>West Fulton High School</title>
+        <title>Westwood High School</title>
     </head>
     <body>
         <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -67,7 +67,7 @@
         </script>
         <div id="navigation">
             <nav class="navbar scrolling-navbar fixed-top navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">West Fulton High School</a>
+                <a class="navbar-brand" href="#">Westwood High School</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -104,7 +104,7 @@
         <p>&nbsp</p>
         <div id="main">
           <center>
-            <h1>Welcome to West Fulton High School</h1>
+            <h1>Welcome to Westwood High School</h1>
             <ul>
               <a class="btn btn-primary" href="/blog/">Blog (COMING SOON)</a>
               <a class="btn btn-primary" href="https://docs.westfultonhighschool.tk">Docs</a>
@@ -123,7 +123,7 @@
         <footer>
           <center>
               <div>
-                <p>(C) 2019 West Fulton High School</p>
+                <p>(C) 2019 Westwood High School</p>
                 <ul>
                   <a class="btn btn-primary" href="/">Home</a>
                   <a class="btn btn-primary" href="help.html">Help</a>
